--- a/tarea1.tex
+++ b/tarea1.tex
@@ -23,7 +23,7 @@
 \begin{document}
     \title{Tarea 1}
     \author{Careaga Carrillo Juan Manuel \\ Quiróz Castañeda Edgar \\ Soto Corderi Sandra del Mar}
-    \date{Lunes 21 de Septiembre del 2018}
+    \date{Lunes 17 de Septiembre de 2018}
     \maketitle
 
 	\begin{enumerate}
@@ -35,62 +35,65 @@
         como integrales iteradas.
 
         \color{azul}
-				La región morada es el plano $x + 2y + 3z = 6$, la roja el plano
-				$x = 0$, la azul $z = 0$ y la verde $y = 0$.
+        Dado que las ecuaciones $x=0$, $y=0$ y $z=0$ representan los planos $yz$, $xz$ y $xy$
+        respectivamente, sólo hay que fijarse dónde el plano dado por $x+2y+3z=6$ intersecta a dichos
+        planos, en particular, dónde corta a los ejes cartesianos.
 
-				\begin{center}
-            \includegraphics[width=6cm]{img/ej1.png}
+        Para el plano $xy$ hacemos $z=0$, y tenemos la recta $x+2y=6$ que intersecta a los ejes en $(6,0,0)$
+        y en $(0,3,0)$. Para el plano $xz$ hacemos $y=0$ y tenemos la recta $x+3z=6$ que intersecta a los ejes
+        en $(3,0,0)$ y $(0,0,2)$. Finalmente para el plano $yz$ hacemos $x=0$ y tenemos la recta $2y+3z=6$
+        que intersecta a los ejes en $(0,6,0)$ y $(0,0,2)$. Entonces la región buscada se ve así
+        \begin{center}
+            \includegraphics[width=8cm]{img/Ej1_3D.png}
         \end{center}
+        Tomemos por ejemplo la triple integral en la que primero se integra sobre la
+        variable $x$, luego sobre $y$ y al final sobre $z$.
 
-				Tomemos por ejemplo la triple integral en la que primero se integra sobre la
-				variable $x$, luego sobre $y$ y al final sobre $z$.\\
-				En general, tenemos que los límites que se obtienen despejando la
-				variable de $x + 2y + 3z = 6$ son positivos y como el otro límite es 0,
-				entonces podemos saber cuál es el límite superior y cual es el inferior.
+        En general, tenemos que los límites que se obtienen despejando la
+        variable de $x + 2y + 3z = 6$ son positivos y como el otro límite es 0,
+        entonces podemos saber cuál es el límite superior y cual es el inferior.
 
-				Para la primera integral, hay definir los límites despejando $x$ de las
-				superficies que limitan la región.\\
-				Es decir $x = 0$ y $x + 2y + 3z = 6 \implies x = 6 - 2y - 3z$.
-				\[\int_{0}^{6-2y-3z} dx\]
-				Después, hay que hacer lo mismo con la variable $y$, suponiendo a $x$
-				como nula, pues ya se ha integrado, es decir $y = 0$ y
-				$6 = 0 + 2y + 3z \implies y = 3- \frac{3}{2}dz$.
-				\[\int_{0}^{3-\frac{3}{2}z} dy\]
-				Finalmente, hay que hacer lo mismo para $z$, esto es $z = 0$ y
-				$6 = 0 + 0 + 3z \implies z = 2$.
-				\[\int_{0}^{2} dz\]
-				Entonces, la primera triple integral sería
-				\[\int_{0}^{2} \int_{0}^{3-\frac{3}{2}z} \int_{0}^{6-2y-3z} dxdydz\]
-				Análogamente, cambiando el orden de integración de las variables, se
-				obtienen las demás posibles integrales triples.
-				Estas son
+        Para la primera integral, hay definir los límites despejando $x$ de las
+        superficies que limitan la región.
+
+        Es decir $x = 0$ y $x + 2y + 3z = 6 \implies x = 6 - 2y - 3z$.
+        \[\int_{0}^{6-2y-3z} dx\]
+        Después, hay que hacer lo mismo con la variable $y$, suponiendo a $x$
+        como nula, pues ya se ha integrado, es decir $y = 0$ y
+        $6 = 0 + 2y + 3z \implies y = 3- \frac{3}{2}dz$.
+        \[\int_{0}^{3-\frac{3}{2}z} dy\]
+        Finalmente, hay que hacer lo mismo para $z$, esto es $z = 0$ y
+        $6 = 0 + 0 + 3z \implies z = 2$.
+        \[\int_{0}^{2} dz\]
+        Entonces, la primera triple integral sería
+        \[\int_{0}^{2} \int_{0}^{3-\frac{3}{2}z} \int_{0}^{6-2y-3z} dx\,dy\,dz\]
+        Análogamente, cambiando el orden de integración de las variables, se
+        obtienen las demás posibles integrales triples.
+        Estas son
         \begin{align*}
-            &\int_{0}^{3} \int_{0}^{2-\frac{2}{3}y} \int_{0}^{6-2y-3z} dxdzdy\\
-            &\int_{0}^{2} \int_{0}^{6-3z} \int_{0}^{3-\frac{x+3z}{2}} dydxdz\\
-            &\int_{0}^{6} \int_{0}^{2-\frac{x}{3}} \int_{0}^{3-\frac{x+3z}{2}} dydzdx\\
-            &\int_{0}^{6} \int_{0}^{3-\frac{x}{2}} \int_{0}^{2-\frac{x+2y}{3}} dzdydx\\
-            &\int_{0}^{3} \int_{0}^{6-2y} \int_{0}^{2-\frac{x+2y}{3}} dzdxdy
+            &\int_{0}^{3} \int_{0}^{2-\frac{2}{3}y} \int_{0}^{6-2y-3z} dx\,dz\,dy\\
+            &\int_{0}^{2} \int_{0}^{6-3z} \int_{0}^{3-\frac{x+3z}{2}} dy\,dx\,dz\\
+            &\int_{0}^{6} \int_{0}^{2-\frac{x}{3}} \int_{0}^{3-\frac{x+3z}{2}} dy\,dz\,dx\\
+            &\int_{0}^{6} \int_{0}^{3-\frac{x}{2}} \int_{0}^{2-\frac{x+2y}{3}} dz\,dy\,dx\\
+            &\int_{0}^{3} \int_{0}^{6-2y} \int_{0}^{2-\frac{x+2y}{3}} dz\,dx\,dy
         \end{align*}
-
 	}
 
 	% Ejercicio 2
     \item {
         Dibujar la región W descrita por la integral iterada
-        \[
-            \int_{0}^{1} \int_{z^3}^{\sqrt{z}} \int_{0}^{4-x} dydxdz
-        \]
-        Calcular su volumen.
+        \(\displaystyle
+            \int_{0}^{1} \int_{z^3}^{\sqrt{z}} \int_{0}^{4-x} dy\,dx\,dz
+        \)
+        . Calcular su volumen.
 
         \color{azul}
-
-				El dibujo de la región sería la superposición de las regiones en el
-				intervalo en $z$ de 0 a 1.
-				\begin{center}
-            \includegraphics[width=6cm]{img/ej2_1.png}
-						\includegraphics[width=6cm]{img/ej2_2.png}
+        El dibujo de la región sería la superposición de las regiones en el
+        intervalo en $z$ de 0 a 1.
+        \begin{center}
+        \includegraphics[width=8cm]{img/ej2_1.png}
+            \includegraphics[width=8cm]{img/ej2_2.png}
         \end{center}
-
         \begin{align*}
             \int_{0}^{1} \int_{z^3}^{\sqrt{z}} \int_{0}^{4-x} dydxdz
                 &= \int_{0}^{1} \int_{z^3}^{\sqrt{z}} y \Big|_{0}^{4-x} dxdz
@@ -109,6 +112,7 @@
     }
 
     % Ejercicio 3
+    \pagebreak
     \item {
         Integrar la función $f(x,y) = x^2 + 2xy^2 + 2$ sobre la región $D$
         acotada por la gráfica de $y = -x^2 + x$, el eje $x$, y las rectas
@@ -121,11 +125,9 @@
 				Los límites de $y$ son la función constante $y = 0$ y la función
 				$y = -x^2 + x$. Hay que determinar si  $-x^2 + x < 0 $ o $-x^2 + x > 0 $
 				en el intervalo $[0, 2]$ dado por las cotas de $x$.
-
         \[-x^2 + x = 0 \implies x = x^2 \implies x = 1, 0\]
-
-				Entonces la función $y = -x^2 + x$ cambia de signo en 1 y en 0. Veamos
-				qué signo tiene en qué intervalo.
+        Entonces la función $y = -x^2 + x$ cambia de signo en 1 y en 0. Veamos
+        qué signo tiene en qué intervalo.
         \begin{align*}
             -(0.5)^2 + 0.5 = -0.25 + 0.5 & = 0.25 > 0 \\
             -(1.5)^2 + 1.5 = -2.25 + 1.5 & = -0.75 < 0
@@ -133,45 +135,41 @@
         Entones la función es positiva en $(0, 1)$ y negativa en $(1, 2]$.
 
         Por lo tanto hay que considerar dos integrales para calcular el volumen deseado.
-      	\[\int_{0}^{1} \int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy dx + \int_{1}^{2} \int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy dx\]\\
-
-				Las integrales internas serían
-				\begin{align*}
-					&\int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy = (x^2y + \frac{2}{3}xy^3 + 2y) \Big |_{0}^{-x^2+x} = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{0}^{-x^2+x}\\
-					&= (-x^2+x)(x^2 + \frac{2}{3}x(-x^2+x)^2+2) = x(x^2 + \frac{2}{3}(x^5-2x^4+x^3)+2) - x^2(x^2 + \frac{2}{3}(x^5-2x^4+x^3)+2)\\
-					&= (x^3 + \frac{2}{3}(x^6-2x^5+x^4)+2x) - (x^4 + \frac{2}{3}(x^7-2x^6+x^5)+2x^2)
-					= -\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x\\
-					\\
-					&\int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{-x^2+x}^{0} = -(-x^2+x)(x^2 + \frac{2}{3}x(-x^2+x)^2+2)\\
-					&= -(-\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x)
-					= \frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x
-				\end{align*}
-
-				Y de esto las integrales externas serían
-				\begin{align*}
-					&\int_{0}^{1} (-\frac{2}{3}x^7 + 2x^6 - 2x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x) dx
-					= (-\frac{1}{12}x^8 + \frac{2}{7}x^7 - \frac{1}{3}x^6 - \frac{1}{15}x^5 + \frac{1}{4}x^4 - \frac{2}{3}x^3 + x^2) \Big |_{0}^{1}\\
-					&= - \frac{1}{12} + \frac{2}{7} - \frac{1}{3} - \frac{1}{15} + \frac{1}{4} - \frac{2}{3} + 1= \frac{27}{70}\\
-					\\
-					& \int_{1}^{2} -(\frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x) dx
-					= -\int_{1}^{2} (\frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x) dx\\
-					&= -(-\frac{1}{12}x^8 + \frac{2}{7}x^7 - \frac{1}{3}x^6 - \frac{1}{15}x^5 + \frac{1}{4}x^4 - \frac{2}{3}x^3 + x^2) \Big |_{1}^{2}
-					= -(-\frac{1}{12}(2)^8 + \frac{2}{7}(2)^7 - \frac{1}{3}(2)^6 - \frac{1}{15}(2)^5 + \frac{1}{4}(2)^4 - \frac{2}{3}(2)^3 + (2)^2) - \frac{27}{70})\\
-					&=-(-\frac{64}{3} + \frac{256}{7} - \frac{64}{3} - \frac{32}{15} + 4 - \frac{16}{3}+ 4 - \frac{27}{70}) = \frac{584}{105} + \frac{27}{70} = \frac{1249}{210}
-				\end{align*}
-
-				Entonces el volumen total sería $\frac{27}{70} + \frac{1249}{210} = \frac{19}{3}$
-
-
-
+      	\[\int_{0}^{1} \int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy dx + \int_{1}^{2} \int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy dx\]
+        Las integrales internas serían
+        \begin{align*}
+            &\int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy = (x^2y + \frac{2}{3}xy^3 + 2y) \Big |_{0}^{-x^2+x} = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{0}^{-x^2+x}\\
+            &= (-x^2+x)(x^2 + \frac{2}{3}x(-x^2+x)^2+2) = x(x^2 + \frac{2}{3}(x^5-2x^4+x^3)+2) - x^2(x^2 + \frac{2}{3}(x^5-2x^4+x^3)+2)\\
+            &= (x^3 + \frac{2}{3}(x^6-2x^5+x^4)+2x) - (x^4 + \frac{2}{3}(x^7-2x^6+x^5)+2x^2)
+            = -\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x\\
+            \\
+            &\int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{-x^2+x}^{0} = -(-x^2+x)(x^2 + \frac{2}{3}x(-x^2+x)^2+2)\\
+            &= -(-\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x)
+            = \frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x
+        \end{align*}
+        Y de esto las integrales externas serían
+        \begin{align*}
+            &\int_{0}^{1} (-\frac{2}{3}x^7 + 2x^6 - 2x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x) dx
+            = (-\frac{1}{12}x^8 + \frac{2}{7}x^7 - \frac{1}{3}x^6 - \frac{1}{15}x^5 + \frac{1}{4}x^4 - \frac{2}{3}x^3 + x^2) \Big |_{0}^{1}\\
+            &= - \frac{1}{12} + \frac{2}{7} - \frac{1}{3} - \frac{1}{15} + \frac{1}{4} - \frac{2}{3} + 1= \frac{27}{70}\\
+            \\
+            & \int_{1}^{2} -(\frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x) dx
+            = -\int_{1}^{2} (\frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x) dx\\
+            &= -(-\frac{1}{12}x^8 + \frac{2}{7}x^7 - \frac{1}{3}x^6 - \frac{1}{15}x^5 + \frac{1}{4}x^4 - \frac{2}{3}x^3 + x^2) \Big |_{1}^{2}
+            = -(-\frac{1}{12}(2)^8 + \frac{2}{7}(2)^7 - \frac{1}{3}(2)^6 - \frac{1}{15}(2)^5 + \frac{1}{4}(2)^4 - \frac{2}{3}(2)^3 + (2)^2) - \frac{27}{70})\\
+            &=-(-\frac{64}{3} + \frac{256}{7} - \frac{64}{3} - \frac{32}{15} + 4 - \frac{16}{3}+ 4 - \frac{27}{70}) = \frac{584}{105} + \frac{27}{70} = \frac{1249}{210}
+        \end{align*}
+        Entonces el volumen total sería $\frac{27}{70} + \frac{1249}{210} = \frac{19}{3}$
     }
 
-	% Ejercicio 4
+    % Ejercicio 4
+    \pagebreak
     \item {
         Usar integrales dobles para calcular el área de una elipse con semiejes $a$ y $b$.
 
         \color{azul}
-        Supongamos, sin perder la generalidad, que $a\geq b$. La ecuación canónica de la elipse horizontal cuyo centro está en el origen del plano y tiene semiejes $a$ y $b$ es
+        Supongamos, sin perder la generalidad, que $a\geq b$. La ecuación canónica de la elipse horizontal
+        cuyo centro está en el origen del plano y tiene semiejes $a$ y $b$ es
         \[
             \frac{x^2}{a^2}+\frac{y^2}{b^2}=1
         \]
@@ -179,7 +177,10 @@
         \(\displaystyle
             y=\frac{\pm\sqrt{a^2 b^2 -b^2 x^2}}{a}
         \)
-        describe nuestro lugar geométrico. Por simpleza, y aprovechando su simetría con los ejes $X$ e $Y$, dividimos la elipse en 4 regiones iguales delimitadas por los ejes coordenados y únicamente calcularemos el área de una de ellas, llámese $R$, al final, el área total se obtendrá de multiplicar el área de dicha región por 4.
+        describe nuestro lugar geométrico. Por simpleza, y aprovechando su simetría con los ejes $X$ e $Y$,
+        dividimos la elipse en 4 regiones iguales delimitadas por los ejes coordenados y únicamente
+        calcularemos el área de una de ellas, llámese $R$, al final, el área total se obtendrá de multiplicar
+        el área de dicha región por 4.
         \begin{center}
             \includegraphics[width=6cm]{img/ej4.png}
         \end{center}
@@ -198,7 +199,9 @@
             =\int_0^a{\frac{1}{a}\sqrt{a^2b^2-b^2x^2}\,dx}
             =\frac{b}{a}\int_0^a{\sqrt{a^2-x^2}\,dx}
         \]
-        Haciendo la sustitución $x=a \sen{\theta}$ con $0\leq\theta\leq\frac{\pi}{2}$, tenemos que $dx=a\cos{\theta}\,d\theta$; para los límites de la integral, si $x=0=a\sen{\theta}$ entonces $\theta=0$ y si $x=a=a\sen{\theta}$, entonces $\theta=\frac{\pi}{2}$. La integral queda como
+        Haciendo la sustitución $x=a \sen{\theta}$ con $0\leq\theta\leq\frac{\pi}{2}$, tenemos que
+        $dx=a\cos{\theta}\,d\theta$; para los límites de la integral, si $x=0=a\sen{\theta}$ entonces
+        $\theta=0$ y si $x=a=a\sen{\theta}$, entonces $\theta=\frac{\pi}{2}$. La integral queda como
         \[
             \frac{b}{\cancel{a}}\int_0^{\frac{\pi}{2}}{
                 \sqrt{a^2-a^2\sen^2{\theta}}\,\cancel{a}\cos{\theta}\,d\theta
@@ -228,7 +231,8 @@
 
 	% Ejercicio 5
     \item {
-        Mostrar que al evaluar $\iint_DdA$, donde $D$ es una región $y$-simple, se reproduce la fórmula del cálculo de una variable para el área entre dos curvas.
+        Mostrar que al evaluar $\iint_DdA$, donde $D$ es una región $y$-simple, se reproduce la fórmula
+        del cálculo de una variable para el área entre dos curvas.
 
         \color{azul}
         Sea $D$ una región $y-$simple, entonces de define como
@@ -238,7 +242,8 @@
                 \varphi_1(x)\leq y\leq\varphi_2(x)
             \right\}
         \)
-        para algunos $a,b\in\mathbb{R}$ y $\varphi_1(x):\mathbb{R}\rightarrow\mathbb{R}$, $\varphi_2(x):\mathbb{R}\rightarrow\mathbb{R}$. Entonces
+        para algunos $a,b\in\mathbb{R}$ y $\varphi_1(x):\mathbb{R}\rightarrow\mathbb{R}$,
+        $\varphi_2(x):\mathbb{R}\rightarrow\mathbb{R}$. Entonces
         \[
             \iint_D{dA}
             =\int_a^b{
@@ -256,12 +261,14 @@
             =\int_a^b{\varphi_2(x)\,dx}
             -\int_a^b{\varphi_1(x)\,dx}
         \]
-        que es como se calcula el área comprendida entre las curvas $\varphi_1(x)$ y $\varphi_2(x)$ en el intervalo $[a,b]$.
+        que es como se calcula el área comprendida entre las curvas $\varphi_1(x)$ y $\varphi_2(x)$
+        en el intervalo $[a,b]$.
     }
 
 	% Ejercicio 6
     \item {
-        Describir la región que se encuentra entre el cono $z = \sqrt{x^2 + y^2}$ y el paraboloide $z=x^2+y^2$ como una región elemental.
+        Describir la región que se encuentra entre el cono $z = \sqrt{x^2 + y^2}$ y el paraboloide
+        $z=x^2+y^2$ como una región elemental.
 
         \color{azul}
         Se puede cracterizar como una región de tipo III. Proyectando las gráficas al plano $yz$ tenemos
@@ -292,7 +299,8 @@
                     y^2\leq z\leq y
                 \right\}
         \]
-        Debido a las simetrías que presentan ambas gráficas con los planos $xz$ e $yz$, encontrar la descripción en los octantes restanes debe ser sencillo.
+        Debido a las simetrías que presentan ambas gráficas con los planos $xz$ e $yz$, encontrar
+        la descripción en los octantes restanes debe ser sencillo.
 
         Para el segundo octante el comportamento en $y$ y en $z$ es idéntico, sólo reflejamos en $x$
         \[
@@ -321,7 +329,8 @@
                     y^2\leq z\leq y
                 \right\}
         \]
-        Al final, la región comprendida entre ambas superficies es la unión de estas 4 regiones (pues no existe la gráfica en los octantes 5, 6, 7, u 8).
+        Al final, la región comprendida entre ambas superficies es la unión de estas 4 regiones
+        (pues no existe la gráfica en los octantes 5, 6, 7, u 8).
         \[
             R=\bigcup_{i=1}^4{R_i}
         \]
@@ -334,7 +343,8 @@
         \color{azul}
         Para calcular el volumen tendríamos $\iiint_W dV$.
 
-        Primero veamos la intersección de las dos superficies como: $4-y^2 = 2x^2 + y^2 \Rightarrow x^2+y^2 = 2$
+        Primero veamos la intersección de las dos superficies como: $4-y^2 = 2x^2 + y^2
+        \Rightarrow x^2+y^2 = 2$
 
         La intersección del paraboloide y el cilindro se ve :
         \begin{center}
@@ -344,7 +354,8 @@
         \begin{center}
             \includegraphics[width=7cm]{img/ejercicio71.png}\\
         \end{center}
-        De ahí, caracterizamos el volumen como: $\displaystyle\int_{-\sqrt{2}}^{\sqrt{2}}\int_{-\sqrt{2-x^2}}^{\sqrt{2-x^2}}\int_{2x^2+y^2}^{4-y^2}dzdydx$
+        De ahí, caracterizamos el volumen como: $\displaystyle\int_{-\sqrt{2}}^{\sqrt{2}}
+        \int_{-\sqrt{2-x^2}}^{\sqrt{2-x^2}}\int_{2x^2+y^2}^{4-y^2}dz\,dy\,dx$
 
         Resolviendo la integral triple tenemos:
         \begin{align*}
@@ -383,7 +394,8 @@
             Investigar qué es el centro de masa de un cuerpo y cómo se puede calcular usando integrales múltiples.
 
             \color{azul}
-            El centro de masa es una posición definida en relación a un objeto o a un sistema de objetos. Es el promedio de la posición de todas las partes del sistema, ponderadas de acuerdo a sus masas.
+            El centro de masa es una posición definida en relación a un objeto o a un sistema de objetos.
+            Es el promedio de la posición de todas las partes del sistema, ponderadas de acuerdo a sus masas.
 
             Denotamos por $d : \mathbb{R}^3 \rightarrow \mathbb{R}^+$ (continua) la densidad del sólido $S$.
 
@@ -400,12 +412,15 @@
         }
 
         \item{
-            La densidad en un punto $P$ de un cubo sólido de lado $a$ es directamente proporcional al cuadrado de la distancia del punto $P$ a una esquina fija del cubo. Encontrar el centro de masa.
+            La densidad en un punto $P$ de un cubo sólido de lado $a$ es directamente proporcional al
+            cuadrado de la distancia del punto $P$ a una esquina fija del cubo. Encontrar el centro de masa.
 
             \color{azul}
-            Sea $P = (x,y,z)$ y la esquina fija sea el origen. Podemos usar esta función de densidad para encontrar la masa del cubo:\\
+            Sea $P = (x,y,z)$ y la esquina fija sea el origen. Podemos usar esta función de densidad para
+            encontrar la masa del cubo:\\
             $\rho(x,y,z) = k(x^2 + y^2 + z^2)$\\
-            Debido a la simetria de la región, cualquier orden de integración producirá una integral de misma dificultad.\\
+            Debido a la simetria de la región, cualquier orden de integración producirá una integral de
+            la misma dificultad.\\
 
             \begin{flalign*}
                 m &= \int_0^a \int_0^a \int_0^ak(x^2 + y^2 + z^2)dzdydx&\\
@@ -423,7 +438,9 @@
                 M_{yz} &= k \int_0^a\int_0^a\int_0^a x(x^2 + y^2 + z^2)dzdydx&\\
                 &= k\int_0^ax\Big[\int_0^a\int_0^a(x^2 + y^2 + z^2)dzdy\Big]dx&
             \end{flalign*}
-            Notemos que la x puede ser sacada como constante fuera de las dos integrales internas, debido a que es constante con respecto a $y$ y $z$. Después de factorizar, las dos integrales internas son la misma para la masa $m$.\\
+            Notemos que la x puede ser sacada como constante fuera de las dos integrales internas, debido a
+            que es constante con respecto a $y$ y $z$. Después de factorizar, las dos integrales internas
+            son la misma para la masa $m$.\\
             De ahí tenemos:
             \begin{flalign*}
                 M_{yz} &= k \int_0^a x\Big(a^2x^2 + \frac{2a^4}{3}\Big)dx&\\
@@ -431,7 +448,9 @@
                 &= \frac{7}{12}a^6k&
             \end{flalign*}
             Así, $\vec{x} = \frac{M_{yz}}{m} = \frac{7a^6k/12}{a^5k}$\\
-            Finalmente, de la naturaleza de $\rho$ y la simetría de $x, y, z$ en este cubo sólido, se tiene $\vec{x} = \vec{y} = \vec{z}$, y el centro de masa es de $(\frac{7}{12}a, \frac{7}{12}a, \frac{7}{12}a)$
+            Finalmente, de la naturaleza de $\rho$ y la simetría de $x, y, z$ en este cubo sólido, se tiene
+            $\vec{x} = \vec{y} = \vec{z}$, y el centro de masa es de $(\frac{7}{12}a, \frac{7}{12}a,
+            \frac{7}{12}a)$
         }
         \end{enumerate}
     }
