--- a/tarea1.tex
+++ b/tarea1.tex
@@ -119,12 +119,12 @@
         $x = 0$ y $x = 2$.
 
         \color{azul}
-				Primero hay que determinar qué límite es el superior y cual es el inferior.\\
-				Los límites en $x$ son sencillos, pues ambas cotas son constantes, por lo
-				que $x = 0$ es la cota inferior y $x = 2$ es la superior.
-				Los límites de $y$ son la función constante $y = 0$ y la función
-				$y = -x^2 + x$. Hay que determinar si  $-x^2 + x < 0 $ o $-x^2 + x > 0 $
-				en el intervalo $[0, 2]$ dado por las cotas de $x$.
+        Primero hay que determinar qué límite es el superior y cual es el inferior.\\
+        Los límites en $x$ son sencillos, pues ambas cotas son constantes, por lo
+        que $x = 0$ es la cota inferior y $x = 2$ es la superior.
+        Los límites de $y$ son la función constante $y = 0$ y la función
+        $y = -x^2 + x$. Hay que determinar si  $-x^2 + x < 0 $ o $-x^2 + x > 0 $
+        en el intervalo $[0, 2]$ dado por las cotas de $x$.
         \[-x^2 + x = 0 \implies x = x^2 \implies x = 1, 0\]
         Entonces la función $y = -x^2 + x$ cambia de signo en 1 y en 0. Veamos
         qué signo tiene en qué intervalo.
@@ -135,7 +135,7 @@
         Entones la función es positiva en $(0, 1)$ y negativa en $(1, 2]$.
 
         Por lo tanto hay que considerar dos integrales para calcular el volumen deseado.
-      	\[\int_{0}^{1} \int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy dx + \int_{1}^{2} \int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy dx\]
+      	\[\int_{0}^{1} \int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy\,dx + \int_{1}^{2} \int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy\,dx\]
         Las integrales internas serían
         \begin{align*}
             &\int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy = (x^2y + \frac{2}{3}xy^3 + 2y) \Big |_{0}^{-x^2+x} = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{0}^{-x^2+x}\\
@@ -143,8 +143,8 @@
             &= (x^3 + \frac{2}{3}(x^6-2x^5+x^4)+2x) - (x^4 + \frac{2}{3}(x^7-2x^6+x^5)+2x^2)
             = -\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x\\
             \\
-            &\int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{-x^2+x}^{0} = -(-x^2+x)(x^2 + \frac{2}{3}x(-x^2+x)^2+2)\\
-            &= -(-\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x)
+            &\int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy = y(x^2+\frac{2}{3}xy^2 + 2)\Big |_{-x^2+x}^{0} = -(-x^2+x)\left(x^2 + \frac{2}{3}x(-x^2+x)^2+2\right)\\
+            &= -\left(-\frac{2}{3}x^7 + \frac{6}{3}x^6 - \frac{6}{3}x^5 - \frac{1}{3}x^4 + x^3 - 2x^2 + 2x\right)
             = \frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x
         \end{align*}
         Y de esto las integrales externas serían
@@ -155,9 +155,9 @@
             \\
             & \int_{1}^{2} -(\frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x) dx
             = -\int_{1}^{2} (\frac{2}{3}x^7 - 2x^6 + 2x^5 + \frac{1}{3}x^4 - x^3 + 2x^2 - 2x) dx\\
-            &= -(-\frac{1}{12}x^8 + \frac{2}{7}x^7 - \frac{1}{3}x^6 - \frac{1}{15}x^5 + \frac{1}{4}x^4 - \frac{2}{3}x^3 + x^2) \Big |_{1}^{2}
-            = -(-\frac{1}{12}(2)^8 + \frac{2}{7}(2)^7 - \frac{1}{3}(2)^6 - \frac{1}{15}(2)^5 + \frac{1}{4}(2)^4 - \frac{2}{3}(2)^3 + (2)^2) - \frac{27}{70})\\
-            &=-(-\frac{64}{3} + \frac{256}{7} - \frac{64}{3} - \frac{32}{15} + 4 - \frac{16}{3}+ 4 - \frac{27}{70}) = \frac{584}{105} + \frac{27}{70} = \frac{1249}{210}
+            &= -\left(-\frac{1}{12}x^8 + \frac{2}{7}x^7 - \frac{1}{3}x^6 - \frac{1}{15}x^5 + \frac{1}{4}x^4 - \frac{2}{3}x^3 + x^2\right) \Big |_{1}^{2}\\
+            &= -\left(-\frac{1}{12}(2)^8 + \frac{2}{7}(2)^7 - \frac{1}{3}(2)^6 - \frac{1}{15}(2)^5 + \frac{1}{4}(2)^4 - \frac{2}{3}(2)^3 + (2)^2\ - \frac{27}{70}\right)\\
+            &=-\left(-\frac{64}{3} + \frac{256}{7} - \frac{64}{3} - \frac{32}{15} + 4 - \frac{16}{3}+ 4 - \frac{27}{70}\right) = \frac{584}{105} + \frac{27}{70} = \frac{1249}{210}
         \end{align*}
         Entonces el volumen total sería $\frac{27}{70} + \frac{1249}{210} = \frac{19}{3}$
     }
